--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -32,3 +32,10 @@ body {
     color: aquamarine;
     
 }
+/* FOOTER */
+
+.footer--copyright {
+    font-size: 21px;
+    color: grey;
+    text-align: right;
+}
